Fix outline and jumping text in categories
[MAILPOET-2988]

--- a/assets/css/src/components/_categories.scss
+++ b/assets/css/src/components/_categories.scss
@@ -19,6 +19,7 @@
 
   &:hover,
   &:focus {
+    box-shadow: none;
     color: $color-text-light-hover;
   }
 
@@ -30,6 +31,16 @@
 
 .mailpoet-categories-title {
   position: relative;
+
+  // Hack so the text is not jumping when changed to bold when active
+  &:before {
+    content: attr(data-title);
+    display: block;
+    font-weight: bold;
+    height: 0;
+    overflow: hidden;
+    visibility: hidden;
+  }
 
   .mailpoet-categories-item.active &:after {
     background: $color-secondary;
